@@ -1,3 +1,12 @@
+2014-03-07  Carlos Garcia Campos  <cgarcia@igalia.com>
+
+        [GTK] Use final and override in WebPrintOperationGtk
+        https://bugs.webkit.org/show_bug.cgi?id=129868
+
+        Reviewed by Sergio Villar Senin.
+
+        * WebProcess/WebPage/gtk/WebPrintOperationGtk.cpp:
+
 2014-03-06  Alexey Proskuryakov  <ap@apple.com>
 
         [Mac] Allow com.apple.GSSCred in WebKit sandbox profiles
